--- a/environment.yml
+++ b/environment.yml
@@ -1,58 +1,14 @@
 name: midcurvenn
 channels:
-  - defaults
+- defaults
 dependencies:
-  - certifi=2019.6.16=py36_0
-  - pip=19.1.1=py36_0
-  - python=3.6.8=h9f7ef89_7
-  - setuptools=41.0.1=py36_0
-  - sqlite=3.28.0=he774522_0
-  - vc=14.1=h0510ff6_4
-  - vs2015_runtime=14.15.26706=h3a45250_4
-  - wheel=0.33.4=py36_0
-  - wincertstore=0.2=py36h7fe50ca_0
-  - pip:
-    - absl-py==0.8.0
-    - astor==0.8.0
-    - cairocffi==1.0.2
-    - cairosvg==2.4.1
-    - cffi==1.12.3
-    - cssselect2==0.2.1
-    - cycler==0.10.0
-    - decorator==4.4.0
-    - defusedxml==0.6.0
-    - drawsvg==1.3.0
-    - gast==0.2.2
-    - google-pasta==0.1.7
-    - grpcio==1.23.0
-    - h5py==2.9.0
-    - imageio==2.5.0
-    - keras==2.2.5
-    - keras-applications==1.0.8
-    - keras-contrib==2.0.8
-    - keras-preprocessing==1.1.0
-    - kiwisolver==1.1.0
-    - markdown==3.1.1
-    - matplotlib==3.1.1
-    - networkx==2.3
-    - numpy==1.17.1
-    - pillow==6.1.0
-    - protobuf==3.9.1
-    - pycparser==2.19
-    - pyparsing==2.4.2
-    - python-dateutil==2.8.0
-    - pywavelets==1.0.3
-    - pyyaml==5.1.2
-    - scikit-image==0.15.0
-    - scipy==1.3.1
-    - six==1.12.0
-    - tensorboard==1.14.0
-    - tensorflow==1.14.0
-    - tensorflow-estimator==1.14.0
-    - termcolor==1.1.0
-    - tinycss2==1.0.2
-    - webencodings==0.5.1
-    - werkzeug==0.15.6
-    - wrapt==1.11.2
-prefix: C:\Users\yogesh.kulkarni\AppData\Local\Continuum\anaconda3\envs\midcurvenn
+- certifi=2018.8.24=py35_1
+- pip=10.0.1=py35_0
+- python=3.5.6=he025d50_0
+- setuptools=40.2.0=py35_0
+- vc=14.1=h0510ff6_4
+- vs2015_runtime=14.16.27012=hf0eaf9b_0
+- wheel=0.31.1=py35_0
+- wincertstore=0.2=py35hfebbdb8_0
+prefix: C:\Users\YogeshKulkarni\AppData\Local\conda\conda\envs\midcurvenn
 
