--- a/src/environment.yml
+++ b/src/environment.yml
@@ -4,11 +4,21 @@ channels:
   - defaults
 dependencies:
   - blas=1.0=mkl
-  - certifi=2019.9.11=py36_0
+  - ca-certificates=2020.1.1=0
+  - certifi=2019.11.28=py36_0
   - cffi=1.14.0=py36h7a1dbc1_0
   - cudatoolkit=10.1.243=h74a9793_0
+  - cycler=0.10.0=py36h009560c_0
+  - freetype=2.9.1=ha9979f8_1
   - icc_rt=2019.0.0=h0cc432a_1
+  - icu=58.2=ha66f8fd_1
   - intel-openmp=2020.0=166
+  - jpeg=9b=hb83a4c4_2
+  - kiwisolver=1.1.0=py36ha925a31_0
+  - libpng=1.6.37=h2a8f88b_0
+  - libtiff=4.1.0=h56a325e_0
+  - matplotlib=3.1.3=py36_0
+  - matplotlib-base=3.1.3=py36h64f37c6_0
   - mkl=2020.0=166
   - mkl-service=2.3.0=py36hb782905_0
   - mkl_fft=1.0.15=py36h14836fe_0
@@ -16,22 +26,40 @@ dependencies:
   - ninja=1.9.0=py36h74a9793_0
   - numpy=1.18.1=py36h93ca92e_0
   - numpy-base=1.18.1=py36hc3f5095_1
+  - olefile=0.46=py36_0
+  - openssl=1.1.1d=he774522_4
+  - pillow=7.0.0=py36hcc1f983_0
   - pip=19.2.3=py36_0
   - pycparser=2.19=py_0
+  - pyparsing=2.4.6=py_0
+  - pyqt=5.9.2=py36h6538335_2
   - python=3.6.9=h5500b2f_0
+  - python-dateutil=2.8.1=py_0
+  - pytorch=1.4.0=py3.6_cuda101_cudnn7_0
+  - qt=5.9.7=vc14h73c81de_0
   - setuptools=41.4.0=py36_0
+  - sip=4.19.8=py36h6538335_0
   - six=1.14.0=py36_0
   - sqlite=3.30.0=he774522_0
+  - tk=8.6.8=hfa6e2cd_0
+  - tornado=6.0.3=py36he774522_3
   - vc=14.1=h0510ff6_4
   - vs2015_runtime=14.16.27012=hf0eaf9b_0
   - wheel=0.33.6=py36_0
   - wincertstore=0.2=py36h7fe50ca_0
-  - pytorch=1.4.0=py3.6_cuda101_cudnn7_0
+  - xz=5.2.4=h2fa13f4_4
+  - zlib=1.2.11=h62dcd97_3
+  - zstd=1.3.7=h508b16e_0
   - pip:
     - absl-py==0.9.0
     - astor==0.8.1
     - cachetools==4.0.0
+    - cairocffi==1.1.0
+    - cairosvg==2.4.2
     - chardet==3.0.4
+    - cssselect2==0.2.2
+    - defusedxml==0.6.0
+    - drawsvg==1.5.1
     - gast==0.2.2
     - google-auth==1.11.2
     - google-auth-oauthlib==0.4.1
@@ -39,6 +67,7 @@ dependencies:
     - grpcio==1.27.2
     - h5py==2.10.0
     - idna==2.9
+    - imageio==2.8.0
     - keras-applications==1.0.8
     - keras-preprocessing==1.1.0
     - markdown==3.2.1
@@ -55,9 +84,10 @@ dependencies:
     - tensorflow==2.1.0
     - tensorflow-estimator==2.1.0
     - termcolor==1.1.0
-    - torch==1.4.0
+    - tinycss2==1.0.2
     - urllib3==1.25.8
+    - webencodings==0.5.1
     - werkzeug==1.0.0
     - wrapt==1.12.0
-prefix: C:\Users\YogeshKulkarni\AppData\Local\conda\conda\envs\midcurvenn
+prefix: C:\Users\yogesh.kulkarni\AppData\Local\Continuum\anaconda3\envs\midcurvenn
 
